--- a/SLAW/slaw/templates/slaw/voting-category.html
+++ b/SLAW/slaw/templates/slaw/voting-category.html
@@ -1,5 +1,11 @@
-{% for category in categories %}
-<ul>
-    <li><a href="{% url %}">{{category.get_Category_of_award_display}}</a></li>
-</ul>
-{% endfor %}
+{% extends "slaw/base.html" %}
+{% block title %}Voting Category{% endblock %}
+
+{% block content %}
+    {% for category in categories %}
+    <ul>
+        <li><a href="{% url 'voting-list' category.id %}">{{category.get_Category_of_award_display}}</a></li>
+    </ul>
+    {% endfor %}
+
+{% endblock %}
