--- a/SLAW/slaw/templates/slaw/voting-list.html
+++ b/SLAW/slaw/templates/slaw/voting-list.html
@@ -2,27 +2,24 @@
 {% block title %}{{category.get_Category_of_award_display}}{% endblock %}
 
 {% block content %}
-<div>
-    <h3>{{category.get_Category_of_award_display}}</h3>
-        <div class="boxesContainer">
-            {% for nominee in category.nominees_set.all %}
-                <div class="cardBox">
-                    <div class="card">
-                        <div class="front">
-                            <h3>{{nominee.Full_Name}}</h3>
-                            <p>{{nominee.Institution}}</p>
-                        </div>
-                        <div class="back">
-                            <h3>{{nominee.Full_Name}}</h3>
-                            <p>{{nominee.Institution}}</p>
-                            <a href="{% url 'vote' nominee.id %}">Vote</a>
-                        </div>
-                    </div>
+<div class="main-voting-list-div">
+    <h2>{{category.get_Category_of_award_display}}</h2>
+    <div class="row">
+        {% for nominee in category.nominees_set.all %}
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <!-- <img src="" alt=""> -->
+                <div class="caption" style="text-align: center;">
+                    <h3>{{nominee.Full_Name}}</h3>
+                    <p>{{nominee.Institution}}</p>
+                    <p><a href="{% url 'vote' nominee.id %}" class="btn btn-primary" role="button">Vote</a></p>
                 </div>
-            {% endfor %}
+            </div>
         </div>
-        
-    
+        {% endfor %}
+    </div>
 </div>
+
+
 
 {% endblock %}
