added user authentication

--- a/SLAW/slaw/templates/slaw/base.html
+++ b/SLAW/slaw/templates/slaw/base.html
@@ -66,6 +66,7 @@
 					<li><a href="{% url 'nominees' %}">Award Nominees</a></li>
 					<li><a href="{% url 'voting-category' %}">Vote</a></li>
 					<li><a href="{% url 'nominate' %}">Nominate</a></li>
+					<li><a href="{% url 'register' %}">Sign Up</a></li>
 				</ul>
 			</nav>
 			<!-- /Navigation -->
