--- a/SLAW/slaw/templates/slaw/base.html
+++ b/SLAW/slaw/templates/slaw/base.html
@@ -66,7 +66,13 @@
 					<li><a href="{% url 'nominees' %}">Award Nominees</a></li>
 					<li><a href="{% url 'voting-category' %}">Vote</a></li>
 					<li><a href="{% url 'nominate' %}">Nominate</a></li>
-					<li><a href="{% url 'register' %}">Sign Up</a></li>
+					{% if user and user.is_authenticated %}
+					<li><a href="{% url 'logout' %}">Logout</a></li>
+					{% else %}
+						<li><a href="{% url 'register' %}">Sign Up</a></li>
+						<li><a href="{% url 'login' %}">Login</a></li>
+					{% endif %}
+					
 				</ul>
 			</nav>
 			<!-- /Navigation -->
