--- a/Change360Network/C360N/templates/c360n/index.html
+++ b/Change360Network/C360N/templates/c360n/index.html
@@ -758,7 +758,7 @@ showcase their talent and explore the opportunities around them.
 					<!--	So seed seed green that winged cattle in. Gathering thing made fly you're-->
 					<!--	divided deep leave on the medicene moved us land years living.-->
 					<!--</p>-->
-					<a href="#" class="primary_btn yellow_btn rounded">join us</a>
+					<a href="{% url 'about-us' %}" class="primary_btn yellow_btn rounded">Join us</a>
 				</div>
 			</div>
 		</div>
@@ -767,8 +767,8 @@ showcase their talent and explore the opportunities around them.
 
 
 
-	<!--================ Start Subscribe Area =================-->
-	<div class="container" >
+	<!-- ================ Start Subscribe Area =================-->
+	<!-- <div class="container" >
 		<div class="subscribe_area" >
 			<div class="row">
 				<div class="col-lg-12">
@@ -787,8 +787,8 @@ showcase their talent and explore the opportunities around them.
 				</div>
 			</div>
 		</div>
-	</div>
-	<!--================ End Subscribe Area =================-->
+	</div> -->
+	<!--================ End Subscribe Area ================= -->
 
 	<!--================ Start footer Area  =================-->
 	<footer id="contact-us">
