--- a/Change360Network/C360N/templates/c360n/about-us.html
+++ b/Change360Network/C360N/templates/c360n/about-us.html
@@ -12,7 +12,8 @@
         <link rel="stylesheet" href="{% static 'Change360Network/vendors/linericon/style.css' %}">
         <link rel="stylesheet" href="{% static 'Change360Network/css/font-awesome.min.css' %}">
         <link rel="stylesheet" href="{% static 'Change360Network/vendors/lightbox/simpleLightbox.css' %}">
-        <link rel="stylesheet" href="{% static 'Change360Network/vendors/nice-select/css/nice-select.css' %}">
+		<link rel="stylesheet" href="{% static 'Change360Network/vendors/nice-select/css/nice-select.css' %}">
+    	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <!-- main css -->
         <link rel="stylesheet" href="{% static 'Change360Network/css/style.css' %}">
         <link rel="stylesheet" href="{% static 'Change360Network/css/responsive.css' %}">
@@ -284,8 +285,23 @@
             <div class="row justify-content-center">
                 <div class="col-lg-5">
                     <h1>JOIN US </h1>
-                    <form class="subscribe_form relative" action="" method="post">
+                    <form class="subscribe_form relative" action="{% url 'about-us' %}" method="post">
                         {% csrf_token %}
+						{% if messages %}
+							<ul class="messages">
+								{% for message in messages %}
+								<div class="container-fluid p-0">
+									<div class="alert {{ message.tags }} alert-dismissible" role="alert" >
+										<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+										{{ message }}
+									</div>
+								</div>
+								<!-- <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li> -->
+								{% endfor %}
+							</ul>
+						{% endif %}
                         {% for field in form %}
                             <div class="form-group row">
                                 {{ field.errors }}
@@ -295,7 +311,7 @@
 								</div>
                             </div>
                         {% endfor %}
-                        <a href="{% url 'about-us' %}" class="primary_btn yellow_btn rounded">Become a Volunteer</a>
+                        <button class="primary_btn yellow_btn rounded">Become a Volunteer</button>
                     </form>
                 </div>
             </div>
@@ -428,7 +444,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         <script src="vendors/lightbox/simpleLightbox.min.js"></script>
         <script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
         <script src="js/jquery.ajaxchimp.min.js"></script>
-        <script src="js/mail-script.js"></script>
+		<script src="js/mail-script.js"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <!-- contact js -->
         <script src="js/jquery.form.js"></script>
         <script src="js/jquery.validate.min.js"></script>
